--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
 
 <h2>Rifat Nabi's Git Achievements <img src='http://www.gravatar.com/avatar/392ad9591d2b38dbdefc04af90ced991'/></h2>
-Unlocked        5/      53 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 8 points<br>
+Unlocked        6/      53 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 11 points<br>
 <ul>
+<li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Socialite (Level 1)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 1)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
@@ -20,16 +21,30 @@ Unlocked        5/      53 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
- 118 branch
- 102 status
+ 473 status
+ 465 branch
   17 achievements
-   6 help
-   4 config
+  12 help
+   7 reset
+   7 checkout
+   5 ignore
+   5 config
+   3 init
    3 commit
    3 add
    3 Wed
+   2 rm
+   2 remote
    2 push
+   2 diff
+   2 !git
    1 prune
+   1 fetch
+   1 extras
+   1 extra
+   1 dropbox
+   1 clone
+   1 clean
    1 --help
 </pre>
 <script type="text/javascript">
@@ -42,7 +57,6 @@ function showLocked() {
 <div id="locked">
 There are       53 Achievements. Some achievements can be leveled up depending on the number of times it is used (Used 2 times = level 1, 4 = level 2, 8 = level 3, 16 = level 4, 32 = level 5, etc)
 <ul>
-<li><div class="title">Architect</div><div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Archivist</div><div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Banker</div><div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Baptised</div><div class="info">Set global user name using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
