--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Rifat Nabi's Git Achievements <img src='http://www.gravatar.com/avatar/392ad9591d2b38dbdefc04af90ced991'/></h2>
-Unlocked        8/      53 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 21 points<br>
+Unlocked        8/      53 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 25 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -20,30 +20,32 @@ Unlocked        8/      53 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Presenter (Level 2)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Apprentice Socialite (Level 1)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 1)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
+<li><div class="title">Apprentice Stone Mason (Level 3)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
- 749 status
- 727 branch
+ 762 status
+ 740 branch
   17 achievements
-  13 help
+  14 help
   13 checkout
   12 config
    7 reset
+   5 log
    5 ignore
    4 show
-   4 log
    4 init
+   4 add
    4 !git
    3 push
    3 diff
    3 commit
-   3 add
    3 Wed
    2 rm
    2 remote
+   1 tag
    1 prune
    1 fetch
    1 extras
@@ -51,6 +53,7 @@ Git commands sorted by usage:
    1 dropbox
    1 clone
    1 clean
+   1 branchs
    1 blame
    1 --help
 </pre>
